<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, login!</string>
    <string name="app_name">OTRS</string>
    <string name="type">Type:</string>
    <string name="state">State:</string>
    <string name="priority">Priority:</string>
    <string name="queue">Queue:</string>
    <string name="customer">Customer:</string>
    <string name="owner">Owner:</string>
    <string name="responsible">Responsible:</string>
    <string name="logged">Logged in as:</string>
    <string name="queueView">Queue View</string>
    <string name="statusView">Status View</string>
    <string name="escallationView">Escallation View</string>
    <string name="accounts">Accounts</string>
    <string name="articles">Articles</string>
    <string name="article">Article</string>
</resources>
